<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="74dip"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="0.0dip"
    android:layout_marginLeft="0.0dip"
    android:layout_marginRight="0.0dip"
    android:background="@drawable/mediacontroller_bg"
    android:orientation="horizontal" >
    
    <ImageButton
        android:id="@+id/mediacontroller_play_pause"
        android:layout_width="54.6dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="7.0dip"
        android:background="#00000000"
        android:contentDescription="@string/mediacontroller_play_pause"
        android:gravity="center"
        android:src="@drawable/mediacontroller_pause_button" />

    <Button
        android:id="@+id/mediacontroller_back_live"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="70.0dip"
        android:background="#00000000"
        android:contentDescription="@string/mediacontroller_back_live"
        android:gravity="center"
        android:text="@string/BackLivePlay" />    
    
    
    <Button
        android:id="@+id/mediacontroller_backplay_abs"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="110.0dip"
        android:background="#00000000"
        android:contentDescription="@string/mediacontroller_backplay_abs"
        android:gravity="center"
        android:text="@string/BackPlayABS" />
    
    <EditText android:id="@+id/mediacontroller_backplay_abstime"
        android:layout_width="140dip"
        android:layout_height="40dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="150.0dip"
        android:gravity="center"
        android:text="@string/BackPlayABSTime"/>   
        
     <Button
        android:id="@+id/mediacontroller_backplay_rel"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="300.0dip"
        android:background="#00000000"
        android:contentDescription="@string/mediacontroller_backplay_rel"
        android:gravity="center"
        android:text="@string/BackPlayREL" />

    <Button
        android:id="@+id/faster"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="350.0dip"
        android:gravity="center"
        android:text="faster"
        android:background="#00000000"
        />
    <Button
        android:id="@+id/slower"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="400.0dip"
        android:gravity="center"
        android:text="slower"
        android:background="#00000000"
        />
    <Button
        android:id="@+id/normal"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="440.0dip"
        android:gravity="center"
        android:text="normal"
        android:background="#00000000"
        />
    <Spinner
        android:id="@+id/volume"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="480.0dip"
        android:background="#00000000"
        android:spinnerMode="dialog"
    />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:layout_marginTop="2dip"
        android:layout_toLeftOf="@+id/volume" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mediacontroller_time_current"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/mediacontroller_time_total"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/mediacontroller_seekbar"
            style="@style/MediaController_SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:max="1000" />

        <TextView
            android:id="@+id/mediacontroller_file_name"
            style="@style/MediaController_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:ellipsize="marquee"
            android:singleLine="true" />
    </RelativeLayout>

</RelativeLayout>